--- a/nablaweb/templates/nyheter/news_article.html
+++ b/nablaweb/templates/nyheter/news_article.html
@@ -1,4 +1,9 @@
+{% extends "base.html" %}
 
+{% block title %} Nabla nyheter - {{ news.headline }} {% endblock %}
+
+
+{% block content %}
 <h1>{{ news.headline }} </h1>
 <em>Skrevet av {{ author_name }} <br />
 {{news.pub_date|date:"r" }} </em>
@@ -6,3 +11,5 @@
 <p><strong>{{ news.lead_paragraph }}</strong></p>
 
 <p>{{news.main_text}}</p>
+
+{% endblock %}
