--- a/nablaweb/templates/arrangement/details.html
+++ b/nablaweb/templates/arrangement/details.html
@@ -1,8 +1,8 @@
-<h3> {{ event.tittel }} </h3>
+<h3> {{ event.title }} </h3>
 
 <ul>
 <li>Sted: {{ event.location }}</li>
-<li>Tidspunkt: {{ event.time }}</li>
+<li>Tidspunkt: {{ event.event_start }}</li>
 <li>{{ event.summary }}</li>
 <li>{{ event.body }}</li>
 </ul>
