--- a/nablaweb/templates/arrangement/overview.html
+++ b/nablaweb/templates/arrangement/overview.html
@@ -1,7 +1,7 @@
 {% for event in event_list %}
 <h3><a href="">{{ event.title }}</a></h3>
 <p>
-  {{ event.location }}, {{ event.time }}<br />
+  {{ event.location }}, {{ event.event_start }}<br />
 </p>
 <p>
   {{ event.summary }}
