Arrangement: Under arbeid.

--- a/nablaweb/templates/arrangement/create.html
+++ b/nablaweb/templates/arrangement/create.html
@@ -6,6 +6,7 @@
 
 <p>
 <form action="" method="post">{% csrf_token %}
+  <hidden name="event_type" value="{{ event_type }}">
   <div class="field">
     {{ form.title.errors }}
     <label for="id_title">Tittel:</label>
@@ -31,6 +32,13 @@
     <label for="id_event_start">Tid:</label>
     {{ form.event_start }}
   </div>
+  {% for option in options %}
+  <div class="field">
+    Dette virker ikke: {{ form.option.errors }}
+    <label for="id_{{ option }}">{{ option }}:</label>
+    Ikke dette heller: {{ form.option }}
+  </div>
+  {% endfor %}
   <input type="submit" value="Opprett">
 </form>
 </p>
