--- a/nablaweb/templates/arrangement/create.html
+++ b/nablaweb/templates/arrangement/create.html
@@ -29,21 +29,46 @@
   </div>
   <div class="field">
     {{ form.event_start.errors }}
-    <label for="id_event_start">Tid:</label>
+    <label for="id_event_start">Start:</label>
     {{ form.event_start }}
   </div>
-  {% if options.event_end %}
   <div class="field">
     {{ form.event_end.errors }}
-    <label for="id_event_end">event_end:</label>
+    <label for="id_event_end">Slutt:</label>
     {{ form.event_end }}
   </div>
-  {% endif %}
-  {% if options.FOO %}
+  {% if options.alternative_id %}
   <div class="field">
-    {{ form.FOO.errors }}
-    <label for="id_FOO">FOO:</label>
-    {{ form.FOO }}
+    {{ form.alternative_id.errors }}
+    <label for="id_alternative_id">Alternativ id:</label>
+    {{ form.alternative_id }}
+  </div>
+  {% endif %}
+  {% if options.registration %}
+  <div class="field">
+    {{ form.places.errors }}
+    <label for="id_places">Plasser:</label>
+    {{ form.places }}
+  </div>
+  <div class="field">
+    {{ form.has_registration_deadline.errors }}
+    <label for="id_has_registration_deadline">Registreringsfrist:</label>
+    {{ form.has_registration_deadline }}
+  </div>
+  <div class="field">
+    {{ form.registration_deadline.errors }}
+    <label for="id_registration_deadline">Frist:</label>
+    {{ form.registration_deadline }}
+  </div>
+  <div class="field">
+    {{ form.allow_deregistration.errors }}
+    <label for="id_allow_deregistration">Tillat avmelding:</label>
+    {{ form.allow_deregistration }}
+  </div>
+  <div class="field">
+    {{ form.deregistration_deadline.errors }}
+    <label for="id_deregistration_deadline">Avmeldingsfrist:</label>
+    {{ form.deregistration_deadline }}
   </div>
   {% endif %}
   {% if options.FOO %}
@@ -53,7 +78,6 @@
     {{ form.FOO }}
   </div>
   {% endif %}
-
   <input type="submit" value="Opprett">
 </form>
 </p>
