Endre submit-navn fra 'Opprett' til 'Lagre'.

--- a/nablaweb/templates/nyheter/create_content.html
+++ b/nablaweb/templates/nyheter/create_content.html
@@ -26,7 +26,7 @@
     {{ form.body }}
   </div>
   {% block sitecontent_form_extensions %}{% endblock %}
-  <input type="submit" value="Opprett">
+  <input type="submit" value="Lagre">
 </form>
 </p>
 {% endblock %}
