--- a/nablaweb/templates/nyheter/base_content.html
+++ b/nablaweb/templates/nyheter/base_content.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <h1>{{ content.headline }} </h1>
-<em>Skrevet av {{ content.created_by }} <br />
-{{content.created_date|date:"r" }} </em>
+<em>Publisert {{content.created_date|date:"r" }} av {{ content.created_by }}<br />
+{% if content.last_changed_date %}Sist endret {{content.last_changed_date|date:"r" }} av {{ content.last_changed_by }}{% endif %}</em>
 
 <p><strong>{{ content.lead_paragraph }}</strong></p>
 
