Flytter alt som har med 'innhold' å gjøre over i en egen app.

--- a/nablaweb/templates/nyheter/create_news.html
+++ b/nablaweb/templates/nyheter/create_news.html
@@ -1,4 +1,4 @@
-{% extends "nyheter/create_content.html" %}
+{% extends "innhold/create_content.html" %}
 
 {% block title %} Lag nyhet {% endblock %}
 
