--- a/nablaweb/templates/nyheter/base_news.html
+++ b/nablaweb/templates/nyheter/base_news.html
@@ -1,3 +1,3 @@
-{% extends "nyheter/base_content.html" %}
+{% extends "innhold/base_content.html" %}
 
 {% block title %} Nabla nyheter - {{ content.headline }} {% endblock %}
