--- a/nablaweb/templates/nyheter/list_news.html
+++ b/nablaweb/templates/nyheter/list_news.html
@@ -1,3 +1,3 @@
-{% extends "nyheter/list_content.html" %}
+{% extends "innhold/list_content.html" %}
 
 {% block title %} Nyhetsoversikt {% endblock %}
