--- a/nablaweb/templates/innhold/base_content.html
+++ b/nablaweb/templates/innhold/base_content.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 
-{% block title %} Nabla innhold - {{ content.headline }} {% endblock %}
+{% block title %}{{ content.headline }}{% endblock %}
 
 {% block content %}
 <h1>{{ content.headline }} </h1>
 <em>Publisert {{content.created_date|date:"r" }} av {{ content.created_by }}<br />
 {% if content.last_changed_date > content.created_date %}Sist endret {{content.last_changed_date|date:"r" }} av {{ content.last_changed_by }}{% endif %}</em>
 
+{% block after_title %}{% endblock %}
+
 <p><strong>{{ content.lead_paragraph }}</strong></p>
 
 <p>{{ content.body }}</p>
 
+{% block after_body %}{% endblock %}
 {% endblock %}
