Påmelding til arrangement.

--- a/nablaweb/templates/arrangement/base_event.html
+++ b/nablaweb/templates/arrangement/base_event.html
@@ -2,6 +2,13 @@
 
 {% block after_title %}
 
+{% if messages %}
+Koden som genererte meg bør flyttes.<br />
+{% for message in messages %}
+{{ message }}<br />
+{% endfor %}
+{% endif %}
+
 {% if content.organizer %}
 Arrangør: {{ content.organizer }}<br />
 {% endif %}
