Endrer innholds-template'en slik at felt kun vises hvis de finnes.

--- a/nablaweb/templates/innhold/base_content.html
+++ b/nablaweb/templates/innhold/base_content.html
@@ -9,9 +9,13 @@
 
 {% block after_title %}{% endblock %}
 
+{% if content.lead_paragraph %}
 <p><strong>{{ content.lead_paragraph }}</strong></p>
+{% endif %}
 
+{% if content.body %}
 <p>{{ content.body }}</p>
+{% endif %}
 
 {% block after_body %}{% endblock %}
 {% endblock %}
