Fikser visning av innhold.
En manglende <br /> gjorde at dersom et arrangement var endret ville
informasjon om sted for arrangementet havne på samme linje som sa at
arrangementet var endret.

--- a/nablaweb/templates/innhold/base_content.html
+++ b/nablaweb/templates/innhold/base_content.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>{{ content.headline }} </h1>
 <em>Publisert {{content.created_date|date:"r" }} av {{ content.created_by }}<br />
-{% if content.last_changed_by %}Sist endret {{content.last_changed_date|date:"r" }} av {{ content.last_changed_by }}{% endif %}</em>
+{% if content.last_changed_by %}Sist endret {{content.last_changed_date|date:"r" }} av {{ content.last_changed_by }}<br />{% endif %}</em>
 
 {% block after_title %}{% endblock %}
 
