Legger til støtte for BBCode.
Kode hentet herfra: http://code.google.com/p/postmarkup/
Tolkeren over er knyttet inn i Django via et template-filter kalt
'bbcode'.  Dette er foreløpig utestet og muligens usikkert med tanke
på HTML-injeksjon.

--- a/nablaweb/templates/innhold/base_content.html
+++ b/nablaweb/templates/innhold/base_content.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load bbcode %}
+
 {% block title %}{{ content.headline }}{% endblock %}
 
 {% block content %}
@@ -14,7 +16,7 @@
 {% endif %}
 
 {% if content.body %}
-<p>{{ content.body }}</p>
+<p>{{ content.body|bbcode }}</p>
 {% endif %}
 
 {% endblock %}
