Endring av variabelnavn fra 'person' til 'user'.

--- a/nablaweb/templates/arrangement/administer_event.html
+++ b/nablaweb/templates/arrangement/administer_event.html
@@ -22,7 +22,7 @@
       {% for registration in registrations %}
       <tr>
         <td>{{ registration.place }}</td>
-        <td>{{ registration.person }}</td>
+        <td>{{ registration.user }}</td>
       </tr>
       {% endfor %}
     </table>
