Rydder opp i metodene som har med plasstatus å gjøre.

--- a/nablaweb/templates/arrangement/administer_event.html
+++ b/nablaweb/templates/arrangement/administer_event.html
@@ -7,7 +7,7 @@
 
 {% if event.registration_required %}
   <p>
-    Plasser: {{ event.users_attending }}<br />
+    Plasser: {{ event.places }}<br />
     Påmeldte: {{ event.users_attending }}<br />
     {% if event.has_waiting_list %}
       Ventende: {{ event.users_waiting }}<br />
