--- a/nablaweb/templates/accounts/edit_profile.html
+++ b/nablaweb/templates/accounts/edit_profile.html
@@ -1,3 +1,12 @@
+{% extends "base.html" %}
+{% load avatar_tags %}
+{% block title %}Endre bruker {% endblock %}
+
+{% block content %} 
+{% avatar user 200 %}
+<p>Trykk <a href="/avatar/change/">her</a> for å endre profilbilde.</p>
+
+
 {% if updated %}
 <p>Brukerprofil oppdatert</p>
 {% endif %}
@@ -6,3 +15,6 @@
 {{ profileForm.as_p }}
 <input type="submit" value="Send inn" />
 </form>
+
+{% endblock %}
+
