--- a/nablaweb/templates/index.html
+++ b/nablaweb/templates/index.html
@@ -6,4 +6,13 @@
 
 <h2>Forsida</h2>
 
+Her finnes ting og tang som funker mer eller mindre:
+<ul>
+  <li><strong>Arrangement:</strong>
+     <ul>
+       <li><a href="/arrangement">Liste over arrangementer</a></li>
+     </ul>
+  </li>
+  <li><a href="/profile/edit/">Endre profil</p></li>
+</ul>
 {% endblock %}
