--- a/design/css/main.css
+++ b/design/css/main.css
@@ -95,10 +95,9 @@ div.lcontainer {
 
 #body {
 	width: 100%;
-	height: 500px;
 	background-image: url('../img/body_background.png');
 	repeat: repeat-x;
 	background-position: left top;
 	background-color: #9cbbca;
-	border-top: 1px solid black;
+	overflow: hidden;
 }
