Lagt til ting på siden av boksen. Søk, meny, vi gratulerer, quote of the day og ukens nablad. I tillegg har jeg lagt inn noen open graph tagger jeg fikk fra facebook slik at vi kan ha like-knapper. Har lagt til noen slike under artikler og ukensnablad.
Ser at den animerte gifen for ukens nablad trenger litt gjennomgang.
Trenger også noen til å tegne en ordentlig kake og party-hatter. Disse
bildene er bare midlertidige. Må også bli lagt til javascript i
kalenderen for dynamisk effekt. Den skal virke slik at når en bruker
holder over et valg skal dette liste-elementets klasse endre seg til
hover, hvis det er et liste-elem. over skal det endre klasse til bottom,
hvis det er et liste-elem. under skal det endre klasse til top, m.m
enten den under eller over er den siste i treet i det tilfellet skal den
endre klasse til alone.

--- a/design/css/artikler.css
+++ b/design/css/artikler.css
@@ -77,3 +77,11 @@
 #body div.innh a:hover, #body div.innh a:active {
 	color: #545a5c;
 }
+
+#body div.innh div.innhWrapper div.social {
+	width: 100%;
+	font-size: 0.8em;
+	margin: 10px 0 0 0;
+	padding: 0;
+	color: #8c9598;
+}
