Endrer til engelske navn.
innhold -> content
arrangement -> events
nyheter -> news

--- a/nablaweb/templates/news/create_news.html
+++ b/nablaweb/templates/news/create_news.html
@@ -1,4 +1,4 @@
-{% extends "innhold/create_content.html" %}
+{% extends "content/create_content.html" %}
 
 {% block title %} Lag nyhet {% endblock %}
 
