--- a/nablaweb/templates/events/list_events.html
+++ b/nablaweb/templates/events/list_events.html
@@ -1,3 +1,3 @@
-{% extends "innhold/list_content.html" %}
+{% extends "content/list_content.html" %}
 
 {% block title %} Arrangement {% endblock %}
