Bytter filnavn på templates, og endrer templates-strukturen.
Filnavnene ligner nå på de django sine generic views bruker.

Template'en som tar seg av selve presentasjonen av ting som arver fra
content splittes i to, slik at selve innholdet ligger i en fil som
direkte inkluderes i den andre. Dette for å senere kunne benytte
django sin FormPreview-klasse.

--- a/nablaweb/templates/content/content_create.html
+++ b/nablaweb/templates/content/content_create.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Nytt innhold{% endblock %}
+{% block title %}{{ block.super }} Nytt innhold{% endblock %}
 
 {% block content %}
 {% if form.errors %}
