--- a/nablaweb/templates/content/content_list.html
+++ b/nablaweb/templates/content/content_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Innholdsliste {% endblock %}
+{% block title %}{{ block.super }} Innhold{% endblock %}
 
 {% block content %}
 {% for content in content_list %}
