--- a/nablaweb/templates/events/event_base.html
+++ b/nablaweb/templates/events/event_base.html
@@ -1,6 +1,6 @@
-{% extends "content/base_content.html" %}
+{% extends "content/content_base.html" %}
 
-{% block after_title %}
+{% block base_after_headline %}
 
 {% if messages %}
 Koden som genererte meg bør flyttes.<br />
