--- a/nablaweb/templates/events/event_create.html
+++ b/nablaweb/templates/events/event_create.html
@@ -1,4 +1,4 @@
-{% extends "content/create_content.html" %}
+{% extends "content/content_create.html" %}
 
 {% block title %}Nytt arrangement{% endblock %}
 
