--- a/nablaweb/templates/events/event_list.html
+++ b/nablaweb/templates/events/event_list.html
@@ -1,3 +1,3 @@
-{% extends "content/list_content.html" %}
+{% extends "content/content_list.html" %}
 
 {% block title %} Arrangement {% endblock %}
