--- a/nablaweb/templates/content/content_base.html
+++ b/nablaweb/templates/content/content_base.html
@@ -1,15 +1,11 @@
-{% extends "base.html" %}
-
 {% load bbcode %}
 
-{% block title %}{{ content.headline }}{% endblock %}
-
-{% block content %}
+{% block base %}
 <h1>{{ content.headline }} </h1>
 <em>Publisert {{content.created_date|date:"r" }} av {{ content.created_by }}<br />
 {% if content.has_been_edited %}Sist endret {{content.last_changed_date|date:"r" }} av {{ content.last_changed_by }}<br />{% endif %}</em>
 
-{% block after_title %}{% endblock %}
+{% block base_after_headline %}{% endblock %}
 
 {% if content.lead_paragraph %}
 <p><strong>{{ content.lead_paragraph }}</strong></p>
@@ -18,5 +14,4 @@
 {% if content.body %}
 <p>{{ content.body|bbcode }}</p>
 {% endif %}
-
 {% endblock %}
