Endring av eksisterende innhold.

--- a/nablaweb/templates/content/content_form.html
+++ b/nablaweb/templates/content/content_form.html
@@ -3,5 +3,5 @@
 {% block title %}{{ block.super }} Nytt innhold{% endblock %}
 
 {% block content %}
-{% include "content/content_form_base.html" %}
+{% include form_base %}
 {% endblock %}
