--- a/nablaweb/templates/content/content_form_base.html
+++ b/nablaweb/templates/content/content_form_base.html
@@ -1,27 +1,29 @@
-{% if form.errors %}
-<p>Vennligst rett opp i feilene under.</p>
-{% endif %}
-
-<p>
 <form action="" method="post">{% csrf_token %}
-  {% block form_fields %}
-  <div class="field">
-    {{ form.headline.errors }}
-    <label for="id_headline">Tittel:</label>
-    {{ form.headline }}
-  </div>
-  <div class="field">
-    {{ form.lead_paragraph.errors }}
-    <label for="id_lead_paragraph">Ingress:</label>
-    {{ form.lead_paragraph }}
-  </div>
-  <div class="field">
-    {{ form.body.errors }}
-    <label for="id_body">Brodtekst:</Label>
-    {{ form.body }}
-  </div>
-  {% endblock %}
-  <input type="hidden" name="{{ stage_field }}" value="1" />
-  <input type="submit" value="Vis">
+
+{% block form_fields %}
+
+<div class="field">
+  {{ form.headline.errors }}
+  <label for="id_headline">Tittel:</label>
+  {{ form.headline }}
+</div>
+
+<div class="field">
+  {{ form.lead_paragraph.errors }}
+  <label for="id_lead_paragraph">Ingress:</label>
+  {{ form.lead_paragraph }}
+</div>
+
+<div class="field">
+  {{ form.body.errors }}
+  <label for="id_body">Brodtekst:</Label>
+  {{ form.body }}
+</div>
+
+{% endblock %}
+
+<input type="hidden" name="{{ stage_field }}" value="1" />
+
+<input type="submit" value="Send">
+
 </form>
-</p>
