Rydder litt i koden for administrering av arrangement.

--- a/nablaweb/templates/events/event_administer.html
+++ b/nablaweb/templates/events/event_administer.html
@@ -6,30 +6,34 @@
 <h2>{{ event.headline }}</h2>
 
 {% if event.registration_required %}
+<p>
+  Plasser: {{ event.places }}<br />
+  Påmeldte: {{ event.users_attending }}<br />
+  {% if event.has_waiting_list %}
+  Ventende: {{ event.users_waiting }}<br />
+  {% endif %}
+</p>
+
 <form action="" method="post">{% csrf_token %}
-  <p>
-    Plasser: {{ event.places }}<br />
-    Påmeldte: {{ event.users_attending }}<br />
-    {% if event.has_waiting_list %}
-      Ventende: {{ event.users_waiting }}<br />
-    {% endif %}
-  </p>
-  {% if registrations %}
+
   <select name="action">
     {% for int_name, ext_name in actions.iteritems %}
     <option value="{{ int_name }}">{{ ext_name }}</option>
     {% endfor %}
   </select>
   <input type="text" name="text" size="10" maxlength="10" />
-  <input type="submit" name="commit_changes" value="Utfør endringer" />
+  <input type="submit" name="commit_changes" value="Utfør" />
 
+  {% with regs=registrations %}
+
+  {% if regs %}
   <table border="1">
     <tr>
       <td>Plass</td>
       <td>Navn</td>
       <td align="center">X</td>
     </tr>
-    {% for registration in registrations %}
+    {% for registration in regs %}
     {% if registration.is_attending_place %}
     <tr bgcolor="#00FF00">
     {% else %}{% if registration.is_waiting_place %}
@@ -37,13 +41,17 @@
     {% endif %}{% endif %}
       <td>{{ forloop.counter }} ({{ registration.number }})</td>
       <td>{{ registration.user }}</td>
-      <td><input type="checkbox" name="user" value="{{ registration.user }}" {% if check_boxes %}checked{% endif %} /></td>
+      <td><input type="checkbox" name="user" value="{{ registration.user }}" /></td>
     </tr>
     {% endfor %}
   </table>
   {% else %}
     Det er ingen påmeldte brukere.
   {% endif %}
+
+  {% endwith %}
+
 </form>
 {% endif %}
+
 {% endblock %}
