--- a/nablaweb/templates/news/news_confirm_delete.html
+++ b/nablaweb/templates/news/news_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "content/content_detail.html" %}
+{% extends "content/content_confirm_delete.html" %}
 
 {% block include %}
 {% include "news/news_base.html" %}
