--- a/nablaweb/templates/events/event_confirm_delete.html
+++ b/nablaweb/templates/events/event_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "content/content_detail.html" %}
+{% extends "content/content_confirm_delete.html" %}
 
 {% block include %}
 {% include "events/event_base.html" %}
