Gjør koden for å administrere arrangement litt mer modulær.

--- a/nablaweb/templates/events/event_administer.html
+++ b/nablaweb/templates/events/event_administer.html
@@ -17,7 +17,7 @@
 <form action="" method="post">{% csrf_token %}
 
   <select name="action">
-    {% for int_name, ext_name in actions.iteritems %}
+    {% for int_name, ext_name in actions %}
     <option value="{{ int_name }}">{{ ext_name }}</option>
     {% endfor %}
   </select>
