Lagt til brukerliste

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -4,6 +4,13 @@
 
 <title>{% block title %}Nablaweb{% endblock %}</title>
 
+<style type="text/css">
+	body {
+		background-color:#eee;
+		font-family: Verdana;
+		font-size: 12px;
+		}
+</style>
 </head>
 <body>
   <h1><a href="/">Nabla</a></h1>
