Begynt på brukerregistrering
Virker nå sånn at det skjekkes om brukernavnet finnes i databasen fra før og om det er et ntnubrukernavn.

--- a/nablaweb/templates/index.html
+++ b/nablaweb/templates/index.html
@@ -8,17 +8,17 @@
 
 Her finnes ting og tang som funker mer eller mindre:
 <ul>
-	<li><strong>Arrangement:</strong>
-		<ul>
-			<li><a href="/arrangement">Liste over arrangementer</a></li>
-		</ul>
-	</li>
+    <li><strong>Arrangement:</strong>
+        <ul>
+            <li><a href="/arrangement">Liste over arrangementer</a></li>
+        </ul>
+    </li>
 
-	<li><strong>Accounts:</strong>
-		<ul>
-			<li><a href="/profile/edit/">Endre profil</li>
-			<li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
-		</ul>
-	</li>
+    <li><strong>Accounts:</strong>
+        <ul>
+            <li><a href="/profile/edit/">Endre profil</li>
+              <li><a href="{#{% url nablaweb.accounts.views.list %}#}">Brukerliste</a></li>
+        </ul>
+    </li>
 </ul>
 {% endblock %}
