--- a/nablaweb/templates/index.html
+++ b/nablaweb/templates/index.html
@@ -17,8 +17,14 @@ Her finnes ting og tang som funker mer eller mindre:
 	<li><strong>Accounts:</strong>
 		<ul>
 			<li><a href="/profile/edit/">Endre profil</li>
-			<li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
+			<li><a href="{#{% url accounts.views.list %}#}">Brukerliste</a></li>
 		</ul>
+	</li>
+	
+	<li><strong>Stillingsannonser:</strong></li>
+	    <ul>
+	        <li><a href="/stillinger">Liste over stillingsannonser</li>
+	    </ul>
 	</li>
 </ul>
 {% endblock %}
