--- a/nablaweb/templates/index.html
+++ b/nablaweb/templates/index.html
@@ -16,14 +16,16 @@ Her finnes ting og tang som funker mer eller mindre:
 
 	<li><strong>Accounts:</strong>
 		<ul>
-			<li><a href="/profile/edit/">Endre profil</li>
-			<li><a href="{#{% url accounts.views.list %}#}">Brukerliste</a></li>
+			<li><a href="/profile/edit/">Endre profil</a></li>
+            {# Følgende linje fungerer fint hos meg (andreros). Får dere fremdeles feilmelding? #}
+			{#<li><a href="{% url accounts.views.list %}/accounts/list">Brukerliste</a></li>#}
+			<li><a href="/accounts/list">Brukerliste</a></li>
 		</ul>
 	</li>
 	
 	<li><strong>Stillingsannonser:</strong></li>
 	    <ul>
-	        <li><a href="/stillinger">Liste over stillingsannonser</li>
+	        <li><a href="/stillinger">Liste over stillingsannonser</a></li>
 	    </ul>
 	</li>
 </ul>
