Små endringer på views og urls i /accounts
Legger til docstrings fortløpende. Endret render_to_response() til render().
Anbefaler det, ettersom det er identisk og kortere å skrive. Gjort slik at
accounts/view/ (view_member_profile) viser din egen bruker som standard.

--- a/nablaweb/templates/index.html
+++ b/nablaweb/templates/index.html
@@ -16,7 +16,7 @@ Her finnes ting og tang som funker mer eller mindre:
 
 	<li><strong>Accounts:</strong>
 		<ul>
-			<li><a href="/profile/edit/">Endre profil</a></li>
+			<li><a href="accounts/edit/">Endre profil</a></li>
             {# Følgende linje fungerer fint hos meg (andreros). Får dere fremdeles feilmelding? #}
 			{#<li><a href="{% url accounts.views.list %}/accounts/list">Brukerliste</a></li>#}
 			<li><a href="/accounts/list">Brukerliste</a></li>
